# otel-arrow

rust/otap-dataflow/: Cargo.toml
rust/otap-dataflow/configs/: file-tail-debug-console.yaml
rust/otap-dataflow/crates/contrib-nodes/: Cargo.toml  README.md
rust/otap-dataflow/crates/contrib-nodes/benches/receivers/file_tail/: RESULTS.md  burst_read.rs  delimiter.rs  load_gen.rs  resource_monitor.rs  sustained.rs  tailer.rs
rust/otap-dataflow/crates/contrib-nodes/src/receivers/: mod.rs
rust/otap-dataflow/crates/contrib-nodes/src/receivers/file_tail/: bookmark.rs  config.rs  delimiter.rs  docker.rs  encoding.rs  metrics.rs  mod.rs  rotation.rs  tailer.rs  watcher.rs
rust/otap-dataflow/crates/engine/src/: effect_handler.rs
