[package]
name = "otap-df-contrib-nodes"
description = "OTAP Contrib nodes"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace crates (likely used by most/all features)
otap-df-config = { path = "../config" }
otap-df-engine = { path = "../engine" }
otap-df-engine-macros = { path = "../engine-macros" }
otap-df-otap = { path = "../otap" }
otap-df-pdata = { path = "../pdata" }
otap-df-pdata-views = { workspace = true }
otap-df-telemetry = { path = "../telemetry" }
otap-df-channel = { path = "../channel" }
otap-df-telemetry-macros = { path = "../telemetry-macros" }

arrow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
linkme.workspace = true
chrono = { workspace = true, optional = true }
encoding_rs = { workspace = true, optional = true }
geneva-uploader = { version = "0.4.0", optional = true }
globset = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
opentelemetry-proto = { workspace = true, optional = true }
data_engine_recordset = { path = "../../../experimental/query_engine/engine-recordset", optional = true }
data_engine_recordset_otlp_bridge = { path = "../../../experimental/query_engine/engine-recordset-otlp-bridge", optional = true }
ahash = { workspace = true, optional = true }
azure_core = { workspace = true, optional = true, features = ["reqwest"] }
azure_identity = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
http = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
ryu = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["rustls-no-provider"] }
sysinfo = { workspace = true, optional = true }
urlencoding = { version = "2", optional = true }

[features]
contrib-exporters = [
    "geneva-exporter",
    "azure-monitor-exporter",
]
geneva-exporter = [
    "dep:geneva-uploader",
    "dep:opentelemetry-proto",
]
azure-monitor-exporter = [
    "dep:opentelemetry-proto",
    "dep:azure_identity",
    "dep:reqwest",
    "dep:azure_core",
    "dep:ahash",
    "dep:sysinfo",
    "dep:chrono",
    "dep:flate2",
    "dep:http",
    "dep:itoa",
    "dep:rand",
    "dep:ryu",
    "dep:urlencoding",
]

contrib-processors = [
    "condense-attributes-processor",
    "recordset-kql-processor",
    "resource-validator-processor",
]

contrib-receivers = [
    "file-tail-receiver",
]
file-tail-receiver = [
    "dep:chrono",
    "dep:encoding_rs",
    "dep:globset",
    "dep:notify",
]
condense-attributes-processor = []
recordset-kql-processor = [
    "dep:data_engine_recordset_otlp_bridge",
    "dep:data_engine_recordset",
    "dep:chrono",
]
resource-validator-processor = []

[dev-dependencies]
axum.workspace = true
clap.workspace = true
core_affinity.workspace = true
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
humantime.workspace = true
memory-stats.workspace = true
otap-df-engine = { path = "../engine", features = ["test-utils"] }
otap-df-otap = { path = "../otap", features = ["test-utils"] }
pretty_assertions.workspace = true
rand.workspace = true
serde_yaml.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[target.'cfg(not(windows))'.dev-dependencies]
tikv-jemallocator.workspace = true
tikv-jemalloc-ctl = { workspace = true, features = ["stats"] }

[[bench]]
name = "azure_monitor_transformer"
path = "benches/exporters/azure_monitor_exporter/transformer.rs"
harness = false
required-features = ["azure-monitor-exporter"]

[[bench]]
name = "azure_monitor_gzip_batcher"
path = "benches/exporters/azure_monitor_exporter/gzip_batcher.rs"
harness = false
required-features = ["azure-monitor-exporter"]

[[bench]]
name = "file_tail_delimiter"
path = "benches/receivers/file_tail/delimiter.rs"
harness = false
required-features = ["file-tail-receiver"]

[[bench]]
name = "file_tail_tailer"
path = "benches/receivers/file_tail/tailer.rs"
harness = false
required-features = ["file-tail-receiver"]

[[bench]]
name = "file_tail_sustained"
path = "benches/receivers/file_tail/sustained.rs"
harness = false
required-features = ["file-tail-receiver"]

[[bench]]
name = "file_tail_burst_read"
path = "benches/receivers/file_tail/burst_read.rs"
harness = false
required-features = ["file-tail-receiver"]

[[example]]
name = "mock_la_server"
path = "examples/mock_la_server.rs"
required-features = ["azure-monitor-exporter"]
